<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.cyan</groupId>
        <artifactId>cyan-dataworks</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cyan-dataworks-application</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 强制统一 Fabric8 版本，覆盖 Spring Cloud 锁定的 6.9.2 -->
            <dependency>
                <groupId>io.fabric8</groupId>
                <artifactId>kubernetes-client-bom</artifactId>
                <version>${fabric8.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-dataworks-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-employee-login</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-datagateway-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>arch-base</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>arch-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-client</artifactId>
        </dependency>
    </dependencies>

    <build>
        <finalName>cyan-dataworks</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.3.13</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.cyan.dataworks.Application</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
